--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 certifi==2022.6.15
+charset-normalizer==2.1.1
+idna==3.4
 matplotlib==3.3.4
 pip==21.2.2
+requests==2.28.1
 setuptools==61.2.0
+urllib3==1.26.12
 wheel==0.37.1
 wincertstore==0.2
