--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+altgraph==0.17.3
 appdirs==1.4.4
 beautifulsoup4==4.11.1
 bs4==0.0.1
-certifi==2022.6.15
+certifi==2022.9.24
 chardet==3.0.4
+charset-normalizer==2.1.1
 colorama==0.4.5
 cssselect==1.1.0
 fake-useragent==0.1.11
+future==0.18.2
 googletrans==3.1.0a0
 h11==0.9.0
 h2==3.2.0
@@ -19,17 +22,22 @@ importlib-metadata==5.0.0
 lxml==4.9.1
 matplotlib==3.3.4
 parse==1.19.0
-pip==21.2.2
+pefile==2022.5.30
+pip==22.2.2
 pyee==8.2.2
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.10
 pyppeteer==1.0.2
 pyquery==1.4.3
+pywin32-ctypes==0.2.0
 requests==2.28.1
 requests-html==0.10.0
 rfc3986==1.5.0
-setuptools==61.2.0
+setuptools==65.5.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 tqdm==4.64.1
+urllib3==1.26.12
 w3lib==2.0.1
 websockets==10.3
 wheel==0.37.1
